@@ -127,8 +127,7 @@ BUILD
         libcairo2 libdbus-1-3 libglib2.0-0 libgtk2.0-0 (>=2.18) libgtk2.0-bin
         libpango1.0-0 libstartup-notification0 libx11-6 shared-mime-info
         intltool pkg-config libgtk2.0-dev libglib2.0-dev fakeroot
-        libstartup-notification0-dev libdbus-1-dev libgdk-pixbuf2.0-0
-        libudev0 (>=143) libudev-dev
+        libstartup-notification0-dev libdbus-1-dev libudev0 (>=143) libudev-dev
 
     Also Recommended: udevil|pmount|udisks, eject, lsof, wget, ktsuss|gksu
 
