@@ -4,19 +4,18 @@ Priority: optional
 Maintainer: IgnorantGuru <ignorantguru@gmx.com>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, build-essential, dbus,
  desktop-file-utils, libc6, libcairo2, libdbus-1-3, libglib2.0-0,
- libgtk2.0-0 (>= 2.24), libgtk2.0-bin, libpango1.0-0, libstartup-notification0,
- libx11-6, shared-mime-info, intltool, pkg-config, libgtk2.0-dev (>= 2.24),
+ libgtk2.0-0 (>= 2.18), libgtk2.0-bin, libpango1.0-0, libstartup-notification0,
+ libx11-6, shared-mime-info, intltool, pkg-config, libgtk2.0-dev (>= 2.18),
  libglib2.0-dev, fakeroot, libstartup-notification0-dev, libdbus-1-dev,
- libgdk-pixbuf2.0-0, libgdk-pixbuf2.0-dev, libudev0 (>=143), libudev-dev
+ libudev0 (>=143), libudev-dev
 Standards-Version: 3.9.1
 Homepage: http://ignorantguru.github.com/spacefm/
 
 Package: spacefm
 Architecture: any
 Depends: dbus, desktop-file-utils, bash, libc6, libcairo2, libdbus-1-3,
- libglib2.0-0, libgtk2.0-0 (>= 2.24), libgtk2.0-bin, libgdk-pixbuf2.0-0,
- libpango1.0-0, libstartup-notification0, libx11-6, shared-mime-info,
- libudev0 (>=143)
+ libglib2.0-0, libgtk2.0-0 (>= 2.18), libgtk2.0-bin, libpango1.0-0,
+ libstartup-notification0, libx11-6, shared-mime-info, libudev0 (>=143)
 Recommends: 
 Suggests: udevil, pmount, eject, lsof, wget, ktsuss, gksu
 Conflicts: spacefm-hal
